2013-10-16  Carl Hetherington  <cth@carlh.net>

	* Version 1.17 released.

2013-10-16  Carl Hetherington  <cth@carlh.net>

	* Hopefully fix crash on closing preferences window
	when ~/.config/dcpomatic does not exist.

	* Allow specification of the DCP to make KDMs for,
	in case there is more than one.

	* Speed up response to some settings changes
	(e.g. crop) (#196).

2013-10-15  Carl Hetherington  <cth@carlh.net>

	* Version 1.16 released.

2013-10-15  Carl Hetherington  <cth@carlh.net>

	* Restore up/down buttons for simple content time
	movements.

	* Include film title in KDM filenames.

	* Allow no-stretch scaling like in DVD-o-matic.

2013-10-14  Carl Hetherington  <cth@carlh.net>

	* Add Rec. 709 colour conversion preset using
	Wolfgang Woehl's matrix.

2013-10-14  Carl Hetherington  <cth@carlh.net>

	* Version 1.15 released.

2013-10-14  Carl Hetherington  <cth@carlh.net>

	* Fix some crashes in the KDM dialogue when coming
	out of the add screen without giving a certificate.

	* Really fix libltdl search path on OS X.

2013-10-13  Carl Hetherington  <cth@carlh.net>

	* Version 1.14 released.

2013-10-12  Carl Hetherington  <cth@carlh.net>

	* Add some missing libraries to the OS X build.

	* Fix libltdl search path on OS X.

2013-10-12  Carl Hetherington  <cth@carlh.net>

	* Version 1.13 released.

2013-10-12  Carl Hetherington  <cth@carlh.net>

	* Fix linux static build.

2013-10-11  Carl Hetherington  <cth@carlh.net>

	* Version 1.12 released.

2013-10-11  Carl Hetherington  <cth@carlh.net>

	* Fix failure to create signer certificates
	on Windows.

2013-10-10  Carl Hetherington  <cth@carlh.net>

	* Basic snapping in the timeline.

	* Various improvements to dcpomatic_kdm.

2013-10-10  Carl Hetherington  <cth@carlh.net>

	* Version 1.11 released.

2013-10-10  Carl Hetherington  <cth@carlh.net>

	* libdcp fix to incorrect signature digests.

2013-10-09  Carl Hetherington  <cth@carlh.net>

	* Version 1.10 released.
