@@ -1,3 +1,9 @@
+2013-10-17  Carl Hetherington  <cth@carlh.net>
+
+	* Forward-port fix from master; use 1000000 rather
+	than 1e6 for J2K bandwidth arithmetic to ensure
+	that it's done with integers.
+
 2013-10-16  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.17 released.
